fix(frontend): improve filename overflow

--- a/apps/frontend/src/app.css
+++ b/apps/frontend/src/app.css
@@ -28,3 +28,14 @@ h3 {
 h4 {
   @apply text-xl;
 }
+
+@layer utilities {
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
